--- a/css/style.scss
+++ b/css/style.scss
@@ -385,7 +385,7 @@ footer {
   }
 
   .greetings {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .about-me-summary {
@@ -398,6 +398,23 @@ footer {
 @media only screen and (min-width: 992px) {
   .hero-area-container {
     max-width: 960px;
+  }
+
+  #contact {
+    .form-container {
+      width: 50%;
+    }
+
+    .socials-container {
+      width: 50%;
+    }
+
+    .container:first-child {
+      background-image: url("../img/undraw_delivery_address_03n0.png");
+      background-position: right;
+      background-repeat: no-repeat;
+      background-size: auto 60vh;
+    }
   }
 }
 
