--- a/css/style.scss
+++ b/css/style.scss
@@ -414,7 +414,8 @@ footer {
       background-image: url("../img/undraw_delivery_address_03n0.png");
       background-position: right;
       background-repeat: no-repeat;
-      background-size: auto 60vh;
+      //background-size: 50vw auto;
+      background-size: contain;
     }
   }
 
