--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ main .hero-area-container .hero-area .about-me-summary {
   border: #ffe74c 1px solid;
   border-radius: 5px;
   display: flex;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 #skills .ml-skills-container .card .card-body {
   height: inherit;
@@ -264,6 +264,7 @@ section#projects {
 
 .socials-container {
   display: flex;
+  background-color: #c3d2d5;
 }
 .socials-container .col {
   display: flex;
@@ -298,6 +299,7 @@ footer .socials-container {
   justify-content: space-around;
   width: 100%;
   height: 25px;
+  background-color: unset;
 }
 
 @media only screen and (min-width: 768px) {
@@ -335,9 +337,10 @@ footer .socials-container {
     width: 50%;
   }
   #contact .container:first-child {
+    background-image: url("../img/undraw_delivery_address_03n0.png");
     background-position: right;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 912px 680px;
   }
 
   footer {
