--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ main .hero-area-container .hero-area .about-me-summary {
   display: flex;
 }
 #skills .cards-container .card {
-  height: 94px;
+  height: 150px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -168,11 +168,11 @@ main .hero-area-container .hero-area .about-me-summary {
   max-width: 60px;
 }
 #skills .ml-skills-container .card {
-  height: 94px;
+  height: 120px;
   border: #ffe74c 1px solid;
   border-radius: 5px;
   display: flex;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 #skills .ml-skills-container .card .card-body {
   height: inherit;
@@ -206,6 +206,9 @@ section#projects {
   border: 0.1px solid #1e212b;
 }
 
+#projects .card {
+  margin-bottom: 3rem;
+}
 #projects .space-equally-vertically {
   display: flex;
   flex-direction: column;
@@ -281,7 +284,7 @@ section#projects {
 }
 
 .text-small {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 footer {
