--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@
 $site-red: #fd3e67;
 $site-blue: #645dd7;
 $site-bg-grey: #c3d2d5;
-$site-black: #1e212b;
+$site-black: #1E212B;
 $site-yellow: #ffe74c;
 $white: white;
 
@@ -263,6 +263,7 @@ section#projects {
   .card {
     margin-bottom: 3rem;
   }
+
   .space-equally-vertically {
     display: flex;
     flex-direction: column;
