--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ main .hero-area-container .hero-area .about-me-summary {
   padding: 0;
   border: 0.5px solid #ffe74c;
   margin-bottom: 1rem;
+  border-radius: 2vh;
 }
 #skills .cards-container .card .card-body {
   display: flex;
