--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,19 @@ main .hero-area-container .hero-area .about-me-summary {
   font-family: Comfortaa, serif;
   font-size: 25px;
   font-weight: bold;
+  position: relative;
+}
+
+.section-title:after {
+  content: "";
+  background-color: #fd3e67;
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  height: 2px;
+  border-radius: 5px;
+  width: 70px;
+  border-bottom: 4px solid;
 }
 
 .section-sub-title {
