--- a/css/style.scss
+++ b/css/style.scss
@@ -188,14 +188,14 @@ main {
 }
 
 .section-title {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   color: $site-red;
   font-family: Comfortaa, serif;
   font-size: 25px;
   font-weight: bold;
   position: relative;
 }
+
 .section-title:after {
   content: "";
   background-color: $site-red;
@@ -204,7 +204,7 @@ main {
   bottom: -10px;
   height: 2px;
   border-radius: 5px;
-  width: 70px;
+  width: 60px;
   border-bottom: 4px solid;
 }
 
