--- a/css/style.scss
+++ b/css/style.scss
@@ -322,8 +322,8 @@ section#projects {
 
     // Form Submit button
     button[type="submit"] {
-      background-color: $site-blue;
-      border-color: $site-blue;
+      // background-color: $site-blue;
+      // border-color: $site-blue;
       width: 70%;
       margin-top: 2rem;
     }
