--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -20,16 +19,14 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #c3d2d5;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
+  animation-duration: 2s;
 }
 
 /* Target blank icon */
 /* Inspired by: "https://codepen.io/thiagobraga/pen/bhDdn" */
-a[target="_blank"]:after {
+a[target=_blank]:after {
   content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
   margin: 0 3px 0 5px;
 }
@@ -72,12 +69,10 @@ nav a:hover {
   color: #fd3e67;
   position: relative;
 }
-
 nav a.active,
 nav a.active:hover {
   color: #ffe74c;
 }
-
 nav a::after {
   content: "";
   background-color: #645dd7;
@@ -87,18 +82,12 @@ nav a::after {
   height: 2px;
   width: 100%;
   opacity: 0;
-  -webkit-transition: -webkit-transform 0.2s ease;
-  transition: -webkit-transform 0.2s ease;
   transition: transform 0.2s ease;
-  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
 }
-
 nav a:hover::after {
-  -webkit-transform: translateY(-10px);
-          transform: translateY(-10px);
+  transform: translateY(-10px);
   opacity: 1;
 }
-
 nav .navbar-toggler:focus {
   outline: none;
 }
@@ -112,32 +101,20 @@ main .hero-area-container {
   margin-left: auto;
   margin-right: auto;
 }
-
 main .hero-area-container .hero-area {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   min-height: inherit;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-around;
+  align-items: flex-start;
 }
-
 main .hero-area-container .hero-area .greetings {
   color: white;
   text-transform: uppercase;
   font-family: Poppins, serif;
   font-size: 1.2rem;
 }
-
 main .hero-area-container .hero-area .hero-text {
   color: #ffe74c;
   text-transform: uppercase;
@@ -145,7 +122,6 @@ main .hero-area-container .hero-area .hero-text {
   font-weight: normal;
   font-size: 2rem;
 }
-
 main .hero-area-container .hero-area .about-me-summary {
   font-family: Poppins, sans-serif;
 }
@@ -156,7 +132,6 @@ main .hero-area-container .hero-area .about-me-summary {
   width: 100%;
   height: 50px;
   background: #1e212b;
-  background: -webkit-gradient(linear, left top, left bottom, from(#1e212b), color-stop(26%, #1e212b), to(#c3d2d5));
   background: linear-gradient(180deg, #1e212b 0%, #1e212b 26%, #c3d2d5 100%);
 }
 
@@ -166,7 +141,6 @@ main .hero-area-container .hero-area .about-me-summary {
   width: 100%;
   height: 50px;
   background: #c3d2d5;
-  background: -webkit-gradient(linear, left top, left bottom, from(#c3d2d5), color-stop(27%, #c3d2d5), color-stop(74%, #1e212b));
   background: linear-gradient(180deg, #c3d2d5 0%, #c3d2d5 27%, #1e212b 74%);
 }
 
@@ -198,62 +172,35 @@ main .hero-area-container .hero-area .about-me-summary {
 #stack .card {
   height: 150px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  justify-content: center;
+  align-content: center;
   padding: 0;
   border: 0.5px solid #ffe74c;
   margin-bottom: 1rem;
   border-radius: 10px;
 }
-
 #stack .card .card-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
 }
-
 #stack .ml-skills-container .card {
   height: 120px;
   border: #ffe74c 1px solid;
   border-radius: 10px;
   margin-bottom: 1rem;
 }
-
 #stack .ml-skills-container .card .card-body {
   height: inherit;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
-
 #stack .ml-skills-container .card .card-body p {
   margin: 0;
   color: #645dd7;
@@ -261,7 +208,6 @@ main .hero-area-container .hero-area .about-me-summary {
   font-weight: bold;
   text-transform: uppercase;
 }
-
 #stack .ml-skills-container .card .card-body .muted-text {
   font-family: "Poppins", sans-serif;
   font-size: 0.8rem;
@@ -269,7 +215,6 @@ main .hero-area-container .hero-area .about-me-summary {
   font-weight: normal;
   text-transform: none;
 }
-
 #stack .more-skills {
   font-family: "Poppins", sans-serif;
   color: #1e212b;
@@ -292,81 +237,47 @@ section#projects {
   width: 100%;
   margin-bottom: 2rem;
 }
-
-#contact .form-container ::-webkit-input-placeholder {
-  color: #645dd7;
-}
-
-#contact .form-container :-ms-input-placeholder {
-  color: #645dd7;
-}
-
-#contact .form-container ::-ms-input-placeholder {
-  color: #645dd7;
-}
-
 #contact .form-container ::placeholder {
   color: #645dd7;
 }
-
 #contact .form-container input,
 #contact .form-container select,
 #contact .form-container textarea {
   width: 100%;
   padding: 12px 20px;
   margin-bottom: 8px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: none;
   border-bottom: 2px solid #645dd7;
   /* Form Validation  */
   /* This class is added by JS upon invalid input */
 }
-
 #contact .form-container input .invalid,
 #contact .form-container select .invalid,
 #contact .form-container textarea .invalid {
   border-color: red;
 }
-
 #contact .form-container textarea {
   border-bottom: 2px solid #645dd7;
 }
-
-#contact .form-container button[type="submit"] {
+#contact .form-container button[type=submit] {
   width: 70%;
   margin-top: 2rem;
 }
 
 .socials-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   background-color: #c3d2d5;
 }
-
 .socials-container .col {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  justify-content: center;
+  align-items: baseline;
 }
-
 .socials-container .social-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   border-radius: 33px;
   padding: 8px;
@@ -374,7 +285,6 @@ section#projects {
   height: 25px;
   margin-bottom: 2rem;
 }
-
 .socials-container .social-container img {
   width: 15px;
   height: 11px;
@@ -383,13 +293,9 @@ section#projects {
 footer {
   font-family: Poppins, serif;
 }
-
 footer .socials-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   width: 80%;
   height: 25px;
   background-color: unset;
@@ -403,22 +309,25 @@ footer .socials-container {
     background-size: auto 70vh;
     max-width: 720px;
   }
+
   .hero-text {
     font-weight: bold;
     font-size: 4rem;
   }
+
   .greetings {
     font-size: 2rem;
   }
+
   .about-me-summary {
     width: 65%;
   }
 }
-
 @media only screen and (min-width: 992px) {
   .hero-area-container {
     max-width: 960px;
   }
+
   #contact .form-container {
     width: 50%;
   }
@@ -432,16 +341,15 @@ footer .socials-container {
     background-size: contain;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .hero-area-container {
     max-width: 1140px;
   }
 }
-
 @media only screen and (min-width: 1400px) {
   .hero-area-container {
     max-width: 1320px;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
